--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 </head>
 
 <body>
-    <div class="ssdf">
-        <article class="bus">
-            <h1>Hello World</h1>
-        </article>
-    </div>
+    <div id="app"></div>
+    <script type="text/javascript">
+        //select the div element with the 'app' id
+        const app = document.getElementById('app');
+
+        //create new h1 element
+        const header = document.createElement('h1');
+
+        //
+
+
+    </script>
+
 </body>
 
 </html>
