--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
         //create new h1 element
         const header = document.createElement('h1');
 
-        //
+        //create a new text node for the h1 element
+        const text = 'develop. preview. ship.';
+        const headerContent = document.createTextNode(text);
 
+        //append the text to the h1 element
+        header.appendChild(headerContent);
+
+        //place the h1 element into the div
+        app.appendChild(header);
 
     </script>
+
+    const bob =
 
 </body>
 
