--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
     <div id="app"></div>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script type="text/javascript">
         //select the div element with the 'app' id
         const app = document.getElementById('app');
