--- a/index.html
+++ b/index.html
@@ -13,26 +13,12 @@
     <div id="app"></div>
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script type="text/javascript">
-        //select the div element with the 'app' id
-        const app = document.getElementById('app');
-
-        //create new h1 element
-        const header = document.createElement('h1');
-
-        //create a new text node for the h1 element
-        const text = 'develop. preview. ship.';
-        const headerContent = document.createTextNode(text);
-
-        //append the text to the h1 element
-        header.appendChild(headerContent);
-
-        //place the h1 element into the div
-        app.appendChild(header);
-
-    </script>
-
-    const bob =
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/jsx">
+          const app = document.getElementById('app');
+          const root = ReactDOM.createRoot(app);
+          root.render(<h1>Develop. Preview. Ship.</h1>);
+        </script>
 
 </body>
 
