--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
     <script type="text/jsx">
           const app = document.getElementById('app');
 
-          function Header() {
-            return (<h1>develop. preview. ship.</h1>)
+          function Header({ title }) {
+            console.log(title);
+            return (<h1>title</h1>)
           }
 
           function HomePage() {
             return (
                 <div>
-                    <Header />
+                    <Header title="React" />
                 </div>
             );
             }
