--- a/index.html
+++ b/index.html
@@ -24,9 +24,16 @@
           
 
           function HomePage() {
+            const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
+
             return (
                 <div>
-                    <Header title="React" />
+                    <Header title="develop. preview. ship." />
+                    <ul>
+                      {names.map((name) => (
+                        <li key={name}>{name}</li>
+                      ))}
+                    </ul>
                 </div>
             );
             }
